--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -217,11 +217,9 @@
 
         <h2>Lagring och säkerhetskopiering</h2>
 
-        <p>Säkerhetskopiering av relationsdatabaser tas löpande och sparas i minst 30 dygn. Data kan därmed återskapas för en specifik tidpunkt inom dessa 30 dagar för analys eller återställning av data vid en incident.</p>
+        <p>Säkerhetskopiering av relationsdatabaser för återställning till specifik tidpunkt sparas i minst 30 dygn. Fullständiga säkerhetskopior skapas en gång per vecka och sparas i minst ett år.</p>
 
-        <p>Filer (ansökningshandlingar, utbildningsmaterial mm) replikeras i fyra versioner på två olika datacenter och sparas tills antagningsomgången eller utbildningsomgången arkiveras.</p>
-
-        <p>Vissa kritiska data säkerhetskopieras även till larmad lokal i Stockholm, Sverige.</p>
+        <p>Filer (ansökningshandlingar, utbildningsmaterial mm) replikeras i fyra versioner på två olika datacenter och sparas tills antagningsomgången eller utbildningsomgången arkiveras. Raderade filer finns kvar för återställning i 30 dagar.</p>
 
 
         <h2>Test, loggning och övervakning</h2>
