--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -226,7 +226,7 @@
 
         <p>Automatiserade och manuella tester genomförs mot en separat produktionsliknande miljö innan förändringar levereras. All data som används vid dessa tester är rensade på personuppgifter.</p>
 
-        <p>Automatiserade tester genomförs kontinuerligt mot produktionsmiljön för att övervaka upptid och svarstider.</p>
+        <p>Automatiserade tester genomförs kontinuerligt mot produktionsmiljön för att övervaka upptid och svarstider. Vi mäter upptid genom att var femte minut kontrollera att sidan returneras som den ska, har kontakt med databasen och att certifikat är giltiga.</p>
 
         <p>Trafik och händelser loggas och övervakas för att identifiera och analysera felaktigheter, potentiella hot och prestandaproblem.</p>
 
