working on new site

--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
     <main>
         <h1>Vi har bytt namn till Learnpoint AB</h1>
 
-        <p class="preamble">Vi har bytt namn från ViaEcole AB och heter numera Learnpoint AB. Du kan läsa mer om oss och våra tjänster på våra produktsidor.</p>
+        <p class="preamble">Vi har bytt namn från ViaEcole AB och heter numera Learnpoint AB. Du kan läsa mer om oss och våra tjänster på våra produktsidor:</p>
 
         <a href="https://learnpoint.se" class="product-link">
             <img class="product-icon" src="Images/learnpoint-product-icon.png" alt="Learnpoint product icon" />
