clean up dead code

--- a/terms-of-services.html
+++ b/terms-of-services.html
@@ -4,14 +4,15 @@
     <title>Integritet och säkerhet - ViaEcole</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="main.css" rel="stylesheet" />
+    <meta name="robots" content="noindex" />
+    <link href="terms-of-services.css" rel="stylesheet" />
 </head>
 <body>
 
     <div class="terms-of-services">
 
         <div class="terms-of-services__close-panel">
-            <a class="terms-of-services__close-link" title="Stäng" href="javascript:history.back();"></a>
+            <a class="terms-of-services__close-link" title="Stäng" href="/"></a>
         </div>
 
 
@@ -294,8 +295,5 @@
 
 
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
