update Learpoint description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <a href="https://learnpoint.se" class="product-link">
             <img class="product-icon" src="Images/learnpoint-product-icon.png" alt="Learnpoint product icon" />
-            <div><strong>Learnpoint</strong> — En integrerad lärplattform och administrationsverktyg för skolor.</div>
+            <div><strong>Learnpoint</strong> — En krångelfri lärplattform som förenklar utbildning för lärare och studenter.</div>
         </a>
 
         <a href="https://yh-antagning.se" class="product-link">
